--- a/Makefile.am
+++ b/Makefile.am
@@ -2,8 +2,9 @@
 include $(top_srcdir)/lol/build/autotools/common.am
 
 ACLOCAL_AMFLAGS = -I lol/build/autotools/m4
+EXTRA_DIST = bootstrap
 
-SUBDIRS = lol pimp
+SUBDIRS = lol src
 
 test: check
 
