pimp: create a toolbox for new dithering experiments.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 include $(top_srcdir)/lol/build/autotools/common.am
 
 ACLOCAL_AMFLAGS = -I lol/build/autotools/m4
-EXTRA_DIST = bootstrap
+EXTRA_DIST += bootstrap
 
 SUBDIRS = lol src
 
